--- a/test.ipynb
+++ b/test.ipynb
@@ -634,7 +634,7 @@
       "141\n",
       "4\n",
       "212\n",
-      "{'Entry Level', 'Internship', 'Senior Level', 'Mid Level'}\n"
+      "{'Mid Level', 'Entry Level', 'Internship', 'Senior Level'}\n"
      ]
     }
    ],
@@ -657,7 +657,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embeddings = generate_embeddings(data)"
+    "embeddings = generate_embeddings(data, with_lemma=True)"
    ]
   },
   {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,14 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -780,8 +773,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13:37:09] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "0.875 0.4482758620689655\n"
+      "[13:55:04] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "0.8660714285714286 0.3103448275862069\n"
      ]
     }
    ],
@@ -792,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,15 +811,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13:48:08] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "0.8015267175572519 0.3939393939393939\n"
+      "[13:55:05] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "0.816793893129771 0.42424242424242425\n"
      ]
     },
     {
@@ -846,10 +839,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# bigger corpus\n",
+    "# custom corpus\n",
+    "# do a final prediction score"
+   ]
   }
  ],
  "metadata": {
