--- a/test.ipynb
+++ b/test.ipynb
@@ -26,6 +26,10 @@
    "source": [
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
+    "# The model is trained using a shallow parser, a POS tagger, and word vectors trained on Common Crawl data.\n",
+    "# These include tokenization, part-of-speech (POS) tagging, dependency parsing, named entity recognition (NER), and more.\n",
+    "\n",
+    "\n",
     "with open(\"data.json\") as f:\n",
     "    data = json.load(f)"
    ]
@@ -634,7 +638,7 @@
       "141\n",
       "4\n",
       "212\n",
-      "{'Mid Level', 'Entry Level', 'Internship', 'Senior Level'}\n"
+      "{'Mid Level', 'Internship', 'Entry Level', 'Senior Level'}\n"
      ]
     }
    ],
@@ -718,7 +722,6 @@
     }
    ],
    "source": [
-    "\n",
     "data_heu_pred = [i for i in in_samp_data if i[\"level_inf\"] is not None]\n",
     "data_heu_correct = [i for i in data_heu_pred if i[\"level\"] == i[\"level_inf\"]]\n",
     "\n",
@@ -742,6 +745,7 @@
     }
    ],
    "source": [
+    "# Keyword heuristic coverage\n",
     "len(data_heu_pred)/len(in_samp_data) # Can estimate ~36% of the data using heuristics with 88% accuracy."
    ]
   },
@@ -773,7 +777,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13:55:04] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[00:00:09] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
       "0.8660714285714286 0.3103448275862069\n"
      ]
     }
@@ -815,19 +819,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[13:55:05] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "0.816793893129771 0.42424242424242425\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/larkin/code/smart-rec-ass/.smart-rec-env/lib/python3.8/site-packages/xgboost/sklearn.py:1146: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
       "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[00:00:09] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "0.816793893129771 0.42424242424242425\n"
      ]
     }
    ],
@@ -839,14 +843,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 3])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = infer_data[0]\n",
+    "model.predict(np.array([d[\"doc_vec\"].vector, infer_data[14][\"doc_vec\"].vector]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# bigger corpus\n",
-    "# custom corpus\n",
-    "# do a final prediction score"
+    "for d in infer_data:\n",
+    "    if d['level_inf'] is None:\n",
+    "        d['level_inf'] = model.predict(np.array([d[\"doc_vec\"].vector]))[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for d in in_samp_data:\n",
+    "    if d['level_inf'] is None:\n",
+    "        d['level_inf'] = model.predict(np.array([d[\"doc_vec\"].vector]))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7801418439716312"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# hiearchical model accuracy on in sample data\n",
+    "data_insamp_correct = [i for i in in_samp_data if i[\"level\"] == i[\"level_inf\"]]\n",
+    "len(data_insamp_correct)/len(in_samp_data) # in sample accuracy using only heuristics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
