--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -51,35 +51,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "141\n",
-      "141\n",
-      "4\n",
-      "141\n",
-      "{0, 1, 2, 3}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Basic stats\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(len(data))\n",
-    "print(len(levels)) # Half the labels are missing\n",
-    "print(len(set(levels))) # For classes to predict\n",
-    "print(len(set(titles))) # almost all titles are unique, they can have some important information about the prediction\n",
-    "print(set(levels))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -124,24 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'missing_title_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# What is the coverage and accuracy if we apply heuristic rules?\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m infer_data \u001b[39m=\u001b[39m infer_lvl_from_rules(missing_title_data)\n\u001b[1;32m      3\u001b[0m in_samp_data \u001b[39m=\u001b[39m infer_lvl_from_rules(model_data)\n\u001b[1;32m      5\u001b[0m data_heu_pred \u001b[39m=\u001b[39m [i \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m in_samp_data \u001b[39mif\u001b[39;00m i[\u001b[39m\"\u001b[39m\u001b[39mlevel_inf\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'missing_title_data' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In-Sample Accuracy (Heuristics Only): 0.8846153846153846\n",
+      "Keyword Heuristic Coverage: 0.36879432624113473\n"
      ]
     }
    ],
    "source": [
     "# What is the coverage and accuracy if we apply heuristic rules?\n",
-    "infer_data = infer_lvl_from_rules(missing_title_data)\n",
+    "infer_data = infer_lvl_from_rules(oos_data)\n",
     "in_samp_data = infer_lvl_from_rules(model_data)\n",
     "\n",
     "data_heu_pred = [i for i in in_samp_data if i[\"level_inf\"] is not None]\n",
@@ -166,14 +134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13:51:07] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+      "[13:55:20] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "XGB Training Accuracy: 0.87\n",
+      "XGB Testing Accuracy: 0.38\n"
      ]
     }
    ],
@@ -193,6 +163,13 @@
    "source": [
     "infer_data = run_inference_oos(oos_data, xg_model)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
