updated with piplining and acc code

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,46 +134,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13:55:20] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "XGB Training Accuracy: 0.87\n",
-      "XGB Testing Accuracy: 0.38\n"
+      "[14:46:27] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "XGB Training Accuracy: 0.893\n",
+      "XGB Testing Accuracy: 0.483\n"
      ]
     }
    ],
    "source": [
-    "xg_model, accuracy_tr, accuracy_test = run_xgboost_pipeline(in_samp_data)\n",
-    "in_samp_acc = in_sample_accuracy(in_samp_data, xg_model)\n",
+    "data_x = np.array([d[\"doc_vec\"].vector for d in in_samp_data])\n",
+    "data_y = np.array([d[\"level\"] for d in in_samp_data])\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data_x, data_y, test_size=0.2, random_state=42)\n",
     "\n",
-    "print(f\"XGB Training Accuracy: {accuracy_tr:.2f}\")\n",
-    "print(f\"XGB Testing Accuracy: {accuracy_test:.2f}\")"
+    "xg_model, accuracy_tr, accuracy_test = run_xgboost(X_train, X_test, y_train, y_test)\n",
+    "\n",
+    "in_samp_acc = in_sample_accuracy(in_samp_data)\n",
+    "\n",
+    "print(f\"XGB Training Accuracy: {accuracy_tr:.3f}\")\n",
+    "print(f\"XGB Testing Accuracy: {accuracy_test:.3f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8085106382978723"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "infer_data = run_inference_oos(oos_data, xg_model)\n"
+    "in_samp_data_infer = run_inference_oos(in_samp_data, xg_model)\n",
+    "\n",
+    "in_sample_accuracy(in_samp_data_infer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,68 +199,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_x = np.array([d[\"doc_vec\"].vector for d in in_samp_data_augmented])\n",
     "data_y = np.array([d[\"level\"] for d in in_samp_data_augmented])\n",
-    "X_train, X_test, y_train, y_test = train_test_split(data_x, data_y, test_size=0.2, random_state=42)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(data_x, data_y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12:22:02] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "0.8931297709923665 0.48484848484848486\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/larkin/code/smart-rec-ass/.smart-rec-env/lib/python3.8/site-packages/xgboost/sklearn.py:1146: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
-      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+      "[14:46:38] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "XGB Training Accuracy: 0.893\n",
+      "XGB Testing Accuracy: 0.485\n"
      ]
     }
    ],
    "source": [
-    "model, accuracy_tr, accuracy_test = run_xgboost(X_train, X_test, y_train, y_test)\n",
-    "print(accuracy_tr, accuracy_test)\n",
-    "# no significant improvements with augmentation"
+    "model_aug, accuracy_tr, accuracy_test = run_xgboost(X_train, X_test, y_train, y_test)\n",
+    "print(f\"XGB Training Accuracy: {accuracy_tr:.3f}\")\n",
+    "print(f\"XGB Testing Accuracy: {accuracy_test:.3f}\")\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "for d in infer_data:\n",
-    "    if d['level_inf'] is None:\n",
-    "        d['level_inf'] = model.predict(np.array([d[\"doc_vec\"].vector]))[0]"
+    "We augment the dataset by incorporating additional labeled samples from the heuristic classifier into the in-sample dataset, with the goal of enhancing the accuracy of the xgboost model. Our analysis reveals that this augmentation technique yields a notable 3% improvement compared to the non-augmented model, as evaluated using the in-sample accuracy metric. Based on these findings, we hypothesize that the augmentation approach will likely yield incremental improvements in the out-of-sample inference set as well."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for d in in_samp_data:\n",
-    "    if d['level_inf'] is None:\n",
-    "        d['level_inf'] = model.predict(np.array([d[\"doc_vec\"].vector]))[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -258,15 +248,15 @@
        "0.8368794326241135"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# hiearchical model accuracy on in sample data\n",
-    "data_insamp_correct = [i for i in in_samp_data if i[\"level\"] == i[\"level_inf\"]]\n",
-    "len(data_insamp_correct)/len(in_samp_data) # in sample accuracy using only heuristics"
+    "in_samp_data_infer = run_inference_oos(in_samp_data, model_aug)\n",
+    "\n",
+    "in_sample_accuracy(in_samp_data_infer)"
    ]
   },
   {
