--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/larkin/code/smart-rec-ass/.smart-rec-env/lib/python3.8/site-packages/torch/cuda/__init__.py:546: UserWarning: Can't initialize NVML\n",
-      "  warnings.warn(\"Can't initialize NVML\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import spacy\n",
     "import json\n",
@@ -234,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We augment the dataset by incorporating additional labeled samples from the heuristic classifier into the in-sample dataset, with the goal of enhancing the accuracy of the xgboost model. Our analysis reveals that this augmentation technique yields a notable 3% improvement compared to the non-augmented model, as evaluated using the in-sample accuracy metric. Based on these findings, we hypothesize that the augmentation approach will likely yield incremental improvements in the out-of-sample inference set as well."
+    "**Results of augmentation:** We augment the dataset by incorporating additional labeled samples from the heuristic classifier into the in-sample dataset, with the goal of enhancing the accuracy of the xgboost model. Our analysis reveals that this augmentation technique yields a notable 3% improvement compared to the non-augmented model, as evaluated using the in-sample accuracy metric. Based on these findings, we hypothesize that the augmentation approach will likely yield incremental improvements in the out-of-sample inference set as well."
    ]
   },
   {
@@ -258,13 +249,6 @@
     "\n",
     "in_sample_accuracy(in_samp_data_infer)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
